src/snapshots/cornercase__ui__tests__groups__a_collapsed_group_without_the_active_project_is_not_marked.snap
---
source: src/ui.rs
assertion_line: 5577
expression: "render_sized(&grouped(0, true), W, TALL).backend()"
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" Projects                      │ Workspaces              │                                          "
"                               │                         │                                          "
"▌ tmp (1)                      │  + New workspace        │                                          "
"                               │                         │                                          "
"  ▸ ● work (2)                 │                         │                                          "
"                               │                         │                                          "
"  ▾ ★ oss                      │                         │                                          "
"    cornercase (1)             │                         │                                          "
"                               │                         │                no tab open               "
"  + New                        │                         │         + Tab opens a shell here         "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  Settings                     │                         │                                          "
"  Usage                        │  Files            TODO  │                                          "
"  Quit                         │                         │                                          "
