src/snapshots/cornercase__ui__tests__groups__renders_expanded_groups_with_the_active_project_inside.snap
---
source: src/ui.rs
expression: "render_sized(&grouped(1, false), W, TALL).backend()"
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"  tmp (1)                      │  + new workspace        │                                          "
"                               │                         │                                          "
"  ▾ ● work                     │                         │                                          "
"▌   api (1)                    │                         │                                          "
"    web (1)                    │                         │                                          "
"                               │                         │                                          "
"  ▾ ★ oss                      │                         │                no tab open               "
"    cornercase (1)             │                         │         + tab opens a shell here         "
"                               │                         │                                          "
"  + new                        │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │  files            todo  │                                          "
"  quit                         │                         │                                          "
