src/snapshots/cornercase__ui__tests__groups__renders_the_icon_and_colour_modal.snap
---
source: src/ui.rs
expression: "render(&styling('★', 99)).backend()"
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"  tmp (1)         ╭─ work ───────────────────────────────────────────────────────╮                  "
"                  │ icon                                                         │                  "
"  ▾ ● work        │  ●  ◉  ◐  ◆  ■  ▲                                            │                  "
"▌   api (1)       │  ▼  ★  ✦  ♥  ♣  ♠                                            │                  "
"    web (1)       │ colour                                                       │pen               "
"                  │  ██  ██  ██  ██  ██  ██  ██  ██                              │hell here         "
"  ▾ ★ oss         │  ██  ██  ██  ██ [██] ██  ██  ██                              │                  "
"    cornercase (1)│                                                              │                  "
"                  │ ▾ ★ work                                               done  │                  "
"  + new project   ╰──────────────────────────────────────────────────────────────╯                  "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │  files            todo  │                                          "
"  quit                         │                         │                                          "
